Source/WebCore/rendering/svg/SVGResourcesCache.cpp
@@ -21,10 +21,12 @@
 #include "SVGResourcesCache.h"
 
 #if ENABLE(SVG)
+#include "HTMLNames.h"
 #include "RenderSVGResourceContainer.h"
 #include "SVGDocumentExtensions.h"
 #include "SVGResources.h"
 #include "SVGResourcesCycleSolver.h"
+#include "SVGStyledElement.h"
 
 namespace WebCore {
 
@@ -160,8 +162,16 @@ void SVGResourcesCache::resourceDestroyed(RenderSVGResourceContainer* resource)
     cache->removeResourcesFromRenderObject(resource);
 
     HashMap<RenderObject*, SVGResources*>::iterator end = cache->m_cache.end();
-    for (HashMap<RenderObject*, SVGResources*>::iterator it = cache->m_cache.begin(); it != end; ++it)
+    for (HashMap<RenderObject*, SVGResources*>::iterator it = cache->m_cache.begin(); it != end; ++it) {
         it->second->resourceDestroyed(resource);
+
+        // Mark users of destroyed resources as pending resolution based on the id of the old resource.
+        Element* resourceElement = toElement(resource->node());
+        SVGStyledElement* clientElement = toSVGStyledElement(it->first->node());
+        SVGDocumentExtensions* extensions = clientElement->document()->accessSVGExtensions();
+
+        extensions->addPendingResource(resourceElement->fastGetAttribute(HTMLNames::idAttr), clientElement);
+    }
 }
 
 }
