Source/WebCore/svg/SVGStyledElement.h
@@ -96,6 +96,12 @@ private:
     END_DECLARE_ANIMATED_PROPERTIES
 };
 
+inline SVGStyledElement* toSVGStyledElement(Node* node)
+{
+    ASSERT(!node || (node->isStyledElement() && node->isSVGElement()));
+    return static_cast<SVGStyledElement*>(node);
+}
+
 } // namespace WebCore
 
 #endif // ENABLE(SVG)
